Bug 39003 - Undo for autoformat actions does not reset the cursor properly
Summary: Undo for autoformat actions does not reset the cursor properly
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.1 release
Hardware: Other All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-07-06 05:28 UTC by Serhiy
Modified: 2012-04-15 05:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
small screenshots with explanations for Undo for autolist (57.44 KB, image/png)
2011-07-06 05:30 UTC, Serhiy
Details
Undo for autolist - text not selected, but cursor in the same line (38.57 KB, image/jpeg)
2012-03-07 00:41 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Serhiy 2011-07-06 05:28:37 UTC
Undo operation after automatically made numbered lists leaves the previous paragraph selected, which means you can not just continue to type on second line since it will erase the first selected paragraph.

When you start the paragraph with "1." and then want to make a new paragraph with Enter button, the Writer automatically creates numbered list. Generally it is good feature, but some times you won't use it. In this case I press Ctrl-Z to undo the autolist and want to continue to type the text. But I can not, since after Undo the previous paragraph remains for some reason selected, so I need to use mouse or arrow buttons to deselect it.

Those movements I regard as unnecessary, especially when you type quickly.

I would expect after Undo to have just a new paragraph with the cursor at the beginning, how it would be when Writer wouldn't create a numbered list automatically.

Please look an image attached with small explained screenshots.
Comment 1 Serhiy 2011-07-06 05:30:44 UTC
Created attachment 48815 [details]
small screenshots with explanations for Undo for autolist
Comment 2 Cor Nouws 2011-07-07 01:25:46 UTC
thanks for your report Serhiy.
I see the same in 3.4.1 on Linux and in a build from the master.

So short: after an undo after an automatic lists starts, the cursor should stay on ints position, and the previous line must not be selected.
Comment 3 Jeffrey 2011-07-07 19:47:54 UTC
Reproduced on LibreOffice 3.4  340m1(Build:12) for OpenSuse Linux.
Comment 4 Cor Nouws 2011-09-07 13:46:15 UTC
one in your area, Cedric?
Comment 5 Björn Michaelsen 2012-03-01 09:02:15 UTC
Regression does appear in oldest version of bibisect-3.5.tar.lzma and must be older.
Comment 6 Cor Nouws 2012-03-03 15:29:31 UTC
(should start working with bibisect too :-) - luckily I have some older versions hanging around)

Bug not present in OOo 330m20
Nor in LO 3.3.0-3.4.5
It started from 3.4.0
Comment 7 Cor Nouws 2012-03-03 15:32:06 UTC
1st class usability annoyance, IMHO
Comment 8 Cor Nouws 2012-03-03 15:47:04 UTC
(In reply to comment #6)

> Bug not present in OOo 330m20
> Nor in LO 3.3.0-3.4.5
> It started from 3.4.0

Forgotten to start DEV300m105. The bug exists there too!
Comment 9 Timur 2012-03-07 00:40:44 UTC
I tested this with LO 3.5.0 and it's not as here. When I press Undo the previous paragraph ISN'T selected. But anyway, the desired result is not achieved, because the cursor stays in the same line – so the problem remains, how do we go to the next line?
Comment 10 Timur 2012-03-07 00:41:49 UTC
Created attachment 58108 [details]
Undo for autolist - text not selected, but cursor in the same line
Comment 11 Cor Nouws 2012-03-07 01:18:09 UTC
Hi Timur,

(In reply to comment #9)
> I tested this with LO 3.5.0 and it's not as here. 

thanks for your test and explanantion!
On which OS do you have this?
Comment 12 Timur 2012-03-07 06:27:12 UTC
I tested both on Win 7 64bit and beta Ubuntu 12.04 32bit.
Comment 13 Cor Nouws 2012-03-07 08:57:11 UTC
(In reply to comment #12)
> I tested both on Win 7 64bit and beta Ubuntu 12.04 32bit.

OK, I tested on the same OS-ses, but 32 bits. Both with the same behaviour: cursor on the proper line, but previous one selected ..
Comment 14 Michael Stahl 2012-03-22 15:33:37 UTC
this should affect all autoformat actions.

OOo 3.4 regression from CWS undoapi
fixed on master:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f24153cded54954da7f0d80941707715c78e4627
Comment 15 Not Assigned 2012-03-26 07:00:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4822b5312b61c1b7991ad028c4c43a2d8fce513f&g=libreoffice-3-5

fdo#39003: fix autoformat Undo cursors:


It will be available in LibreOffice 3.5.3.
Comment 16 Not Assigned 2012-03-27 08:02:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66603450eb12eed9f3d1e9b4210210c9630f64e1&g=libreoffice-3-5-2

fdo#39003: fix autoformat Undo cursors:


It will be available already in LibreOffice 3.5.2.
Comment 17 Cor Nouws 2012-04-15 05:44:34 UTC
(In reply to comment #16)

> It will be available already in LibreOffice 3.5.2.

Perfect!