fdo#39003: fix autoformat Undo cursors:

SwEditShell::Undo: Because the Undo actions nowadays create new shell
cursors directly (while previously they worked on a SwUndoIter), it is
necessary to remove the shell cursor ring before Pop() because Pop(false)
only restores the current cursor from the stack, not the rest of the ring.
(regression from CWS undoapi, 1ba0c1878116ada5dc4ebdecdb1e0a3da9758547)
(cherry picked from commit f24153cded54954da7f0d80941707715c78e4627)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>